# MatchRAG

MatchRag/: .env.example  .gitignore  BACKLOG.md  Makefile  README.md  chat.py  config.py  pyproject.toml  requirements.txt  server.py
MatchRag/.gemini/: agent.md
MatchRag/data/: IndVsNZ.json  IndVsWI.json
MatchRag/data/recently_added_30_male_json/: 1512721.json  1512736.json  1512745.json  1512754.json  1512761.json  1512766.json  1512770.json  README.txt
MatchRag/docs/: agent.md  architecture.md  codeOptimisationBacklog.md  langgraph_anim.html
MatchRag/rag/: __init__.py  chains.py  documents.py  embedding_pipeline.py  flatten_data.py  graph_nodes.py  ingest.py  llm_services.py  load_match.py  prompts.py  providers.py  rag_graph.py  reranker.py  retrievers.py  schemas.py  session_store.py  state.py  vector_store.py
MatchRag/rag/question_handlers/: __init__.py  comparison.py  general.py  match_summary.py  over_summary.py  player_performance.py  utils.py
MatchRag/scripts/: append_commentary.py  scrape_commentary.py
MatchRag/tests/: __init__.py  test_chains.py  test_graph.py  test_handlers.py  test_phase.py  test_pipeline.py  test_rag.py  test_retrievers.py
MatchRag/tickets/: 001-phase-based-exact-analytics.md  002-partnership-analytics.md  003-batter-vs-bowler-matchups.md  004-score-progression-and-scorecards.md  005-extras-and-wicket-modes.md  006-review-and-umpiring-analytics.md  007-cross-match-and-tournament-questions.md  008-hypothetical-and-speculative-questions.md  009-visual-analytics-requests.md
MatchRag/web/: index.html  package-lock.json
MatchRag/web/src/: App.jsx  index.css
MatchRag/web/src/components/: ChatMessage.jsx  ExampleChips.jsx  PipelineInspector.jsx  (+1 more)
